--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "nodemon",
+        "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview"
     },
     "dependencies": {
+        "@heroui/button": "^2.2.16",
+        "@heroui/checkbox": "^2.3.15",
+        "@heroui/input": "^2.4.16",
+        "@heroui/system": "^2.4.12",
+        "@heroui/theme": "^2.4.12",
+        "framer-motion": "^12.5.0",
+        "motion": "^12.5.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-router": "^7.3.0",
@@ -20,12 +27,14 @@
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
+        "autoprefixer": "^10.4.21",
         "eslint": "^9.21.0",
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^15.15.0",
-        "nodemon": "^3.1.9",
+        "postcss": "^8.5.3",
         "sass-embedded": "^1.86.0",
+        "tailwindcss": "^3.4.17",
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.24.1",
         "vite": "^6.2.0"
