--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
         "@heroui/input": "^2.4.16",
         "@heroui/system": "^2.4.12",
         "@heroui/theme": "^2.4.12",
+        "@reduxjs/toolkit": "^2.6.1",
+        "axios": "^1.8.3",
+        "dotenv": "^16.4.7",
         "framer-motion": "^12.5.0",
         "motion": "^12.5.0",
         "react": "^19.0.0",
@@ -24,6 +27,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
+        "@types/node": "^22.13.10",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
