--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
         "@heroui/button": "^2.2.16",
         "@heroui/checkbox": "^2.3.15",
         "@heroui/input": "^2.4.16",
+        "@heroui/select": "^2.4.16",
         "@heroui/system": "^2.4.12",
         "@heroui/theme": "^2.4.12",
-        "@reduxjs/toolkit": "^2.6.1",
         "axios": "^1.8.3",
         "dotenv": "^16.4.7",
         "framer-motion": "^12.5.0",
