--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev": "vite --host",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview"
@@ -12,6 +12,7 @@
     "dependencies": {
         "@heroui/button": "^2.2.16",
         "@heroui/checkbox": "^2.3.15",
+        "@heroui/form": "^2.1.15",
         "@heroui/input": "^2.4.16",
         "@heroui/select": "^2.4.16",
         "@heroui/system": "^2.4.12",
