--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@heroui/form": "^2.1.15",
         "@heroui/input": "^2.4.16",
         "@heroui/select": "^2.4.16",
+        "@heroui/spinner": "^2.2.13",
         "@heroui/system": "^2.4.12",
         "@heroui/theme": "^2.4.12",
         "axios": "^1.8.3",
